--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_KEY=209537cde9954d9ebb984a68df9f6b8d
-ENDPOINT=https://meda-openai.openai.azure.com/
-DEPLOYMENT_NAME=purposeu
-API_VERSION=2023-05-15
+API_KEY=enter your key
+ENDPOINT=enter your endpoint
+DEPLOYMENT_NAME=enter your deplyment name
+API_VERSION=enter your api version
